docs/01-getting-started/ios/v4/set-up-your-environment.mdx
---
title: Set Up Your Environment
hide_title: false
hide_table_of_contents: true
sidebar_position: 2
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Now that you have taken care of all the preliminary issues, we can start building the app. Throughout this guide, you will continously modify this project to extend its functionality to cover a number of basic features.

:::danger Known iOS issues

Due to [a bug in CocoaPods](https://github.com/CocoaPods/CocoaPods/issues/7155) it is necessary to include the `post_install` hook in your Podfile. The `post_install` is different depending on if you use Google Maps or Mapbox Maps:
* [Google Maps `post_install`](https://github.com/MapsPeople/MapsIndoors-SDK-iOS/wiki/Podfile-post_install-v4).
* [Mapbox Maps `post_install`](https://github.com/MapsPeople/MapsIndoors-SDK-iOS/wiki/Podfile-post_install-Mapbox-v4).

:::

## Create an Xcode Project

We recommend using [Xcode](https://developer.apple.com/xcode/) for following along. For this guide we will be using Xcode 14.2. Note that an iOS mobile device is not required, as Xcode allows the use of a simulator.

We start off by creating an Xcode project using the App template:

<img src="/img/getting-started/ios-xcode_template.png" alt="A screenshot of the Xcode template" width="600"/>

For the project settings, you can call it anything you like, however ensure the following settings are set to follow along easier:

* Interface: Storyboard
* Language: Swift

<img src="/img/getting-started/ios-xcode-project_options.png" alt="A screenshot of the Xcode Project Options" width="600"/>

You should now have a project folder with the following files:

<img src="/img/getting-started/ios-xcode-project_folder.png" alt="A screenshot of the Xcode Project Folder" width="300"/>

For the sake of simplicity we will only be operating on these pre-generated files throughout the guide.

## Installing the MapsIndoors SDK

MapsIndoors can be installed using CocoaPods ([Getting Started with CocoaPods](https://guides.cocoapods.org/using/getting-started.html)).

<Tabs>
<TabItem value="cocoapods" label="Cocoapods" default>

### Installing MapsIndoors Using CocoaPods

1. Create a new `Podfile` in your project directory (same folder as your *.xcodeproj*) by running `pod init <XCODEPROJECTNAME>` in Terminal.
1. Add your dependecies to the `Podfile` as follows (replace `YOUR_APPLICATION_TARGET_NAME_HERE` with your actual target name),

    ```ruby
    source 'https://github.com/CocoaPods/Specs.git'

    platform :ios, '15.0' # Replace 15.0 with you iOS Minimum Deployment Target

    target 'YOUR_APPLICATION_TARGET_NAME_HERE' do
      use_frameworks!

      pod 'MapsIndoors', '~>4.1'
      # and your Map Specific pod
      # pod MapsIndoorsGoogleMaps
      # or
      # pod MapsIndoorsMapbox
    end
    ```
1. Add the `post_install` [for Google Maps](https://github.com/MapsPeople/MapsIndoors-SDK-iOS/wiki/Podfile-post_install-v4) or [for Mapbox Maps](https://github.com/MapsPeople/MapsIndoors-SDK-iOS/wiki/Podfile-post_install-Mapbox-v4) to the end of the `Podfile`.

:::caution

In the line containing `pod 'MapsIndoors', '~>4.0'`, where it currently says `4.0`, be sure to replace this number with whatever the latest version of the iOS SDK is.

:::

4. Save the `Podfile` and close Xcode.
1. Open a terminal in the directory of the project. `cd <path-to-project>`
1. Run `pod install` in the terminal.
1. From this time onwards, use the *.xcworkspace* file to open the project.

</TabItem>

<TabItem value="manual-google" label="Manually for Google Maps">

### Install MapsIndoors for Google Maps Manually

* Download the [Google Maps iOS SDK 7.4.0](https://dl.google.com/geosdk/12cdf90d54d85bfcc90d340148d86362ee3189ea24b4bd20ca891e9bd33ded21/GoogleMaps-7.4.0.tar.gz)
* Copy the following frameworks to the folder of your app project (in Finder, **not** in Xcode)
  * GoogleMaps-7.4.0/Base/Frameworks/GoogleMapsBase.xcframework
  * GoogleMaps-7.4.0/Maps/Frameworks/GoogleMaps.xcframework
  * GoogleMaps-7.4.0/Maps/Frameworks/GoogleMapsCore.xcframework
* Drag the `GoogleMaps.bundle` from the `GoogleMaps.framework/Resources` folder into the top level directory of your Xcode project. When prompted, ensure __Copy items into destination group's folder__ is __*not*__ selected.
* Download and unzip the latest [MapsIndoors SDK XCFrameworks](https://github.com/MapsPeople/MapsIndoors-SDK-iOS/releases) from the Releases page
  * You will need the MapsIndoors, MapsIndoorsCore and MapsIndoorsGoogleMaps XCFrameworks
* Drag and drop the MapsIndoors XCFrameworks into your XCode project. In the dialog that pops up, choose “Copy items if needed” and make sure the XCFrameworks are added to the correct target
* In Xcode, go to "General" for your target and expand "Frameworks, Libraries, and Embedded Content" and make sure the three MapsIndoors XCFrameworks are marked as "Embed & Sign"
* In Xcode, go to "Build Settings" for your target and make sure the following entries are present in the `FRAMEWORK_SEARCH_PATHS`
  * `$(inherited)`
  * `$(PROJECT_DIR)/**`

</TabItem>

</Tabs>

:::tip Moving on

This "Getting Started" guide is created using a specific version of the SDK. When moving beyond the "Getting Started" guide, please be sure to use the latest version of the SDK.

:::

## Adding API Credentials

Open back up the project and navigate to the file `AppDelegate.swift`.

1. Add the following import statements to the top of the file:

    <Tabs>
    <TabItem value="googlemaps" label="GoogleMaps" default>

      ```swift
      import GoogleMaps  
      import MapsIndoorsCore
      ```
      
    </TabItem>
    <TabItem value="mapbox" label="Mapbox">

      ```swift
      import Mapbox  
      import MapsIndoorsCore
      ```

    </TabItem>
    </Tabs>

2. Insert the following into the `application(_:didFinishLaunchingWithOptions:)` method. If you are using `Mapbox` then provide your API Key when you add your map to the view inside `viewDidLoad()` in your `ViewController.swift`:

    <Tabs>
    <TabItem value="googlemaps" label="GoogleMaps" default>

      ```swift
       GMSServices.provideAPIKey(`YOUR_GOOGLE_API_KEY`)
      ```
      
    </TabItem>
    <TabItem value="mapbox" label="Mapbox">

      ```swift
       ResourceOptions(accessToken: `YOUR_MAPBOX_API_KEY`)
       let initOptions = MapInitOptions(resourceOptions: myResourceOptions, styleURI: StyleURI.light)
            self.mapView = MapView(frame: view.bounds, mapInitOptions: initOptions)
            // set the MPMapConfig
            MPMapConfig(mapBoxView: mapView!, accessToken: "---")
            Task {
            await MPMapsIndoors.shared.load(apiKey:`YOUR_MAPSINDOORS_API_KEY`)
        }
      ```

    </TabItem>
    </Tabs>

Finally, remember to replace `YOUR_GOOGLE_API_KEY` or `YOUR_MAPBOX_API_KEY` with your Google API key and `YOUR_MAPSINDOORS_API_KEY` with your MapsIndoors API demo key `d876ff0e60bb430b8fabb145`.
